# nm-wifi-gui

./: .SRCINFO  Cargo.toml  DISTRIBUTION.md  INSTALL_ARCH.md  PKGBUILD  README.md  my-wifi-manager.desktop  nm-wifi-gui.desktop
scripts/: run-hypr-floating.sh
src/: main.rs  models.rs
src/backend/: mod.rs  nmcli.rs
src/ui/: window.rs
